# pygeoboundaries

./: .gitignore  README.md  requirements.txt  setup.cfg
.github/workflows/: test.yml
src/pygeoboundaries/: countries_iso_dict.py  geoboundaries.py  stateboundaries.py
tests/: test.py
