[metadata]
name = pygeoboundaries
version = 0.0.1
author = André Ferreira
author_email = andrecnf@gmail.com
description = Python client for geoboundaries API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AndreCNF/pygeoboundaries

[options]
package_dir =
   = src
packages = find:
python_requires = >=3.10
install_requires =
   geojson
   requests
   requests-cache
   geopandas
   sentence-transformers